use my own run command instead of the normal action

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -24,4 +24,4 @@ jobs:
       
     # Run the tests
     - name: Angular run Karma tests
-      uses: ahmedrizwan/angular-karma-test-action@v1.0.8
+      run: cd riskchallenger-test && ng test
