--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -25,8 +25,7 @@ jobs:
     - name: Node $
       uses: actions/setup-node@v1
       with:
-        node-version: $
-
+        node-version: '10.x'
     - name: npm install and npm run build
       run: |
         npm ci
