mvp dashboard working

--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser": "~9.1.4",
     "@angular/platform-browser-dynamic": "~9.1.4",
     "@angular/router": "~9.1.4",
+    "@ctrl/ngx-chartjs": "^3.0.1",
     "@fortawesome/fontawesome-free": "^5.13.0",
+    "chart.js": "^2.9.3",
     "ng-tailwindcss": "^2.2.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
